--- a/Server/public/stylesheets/index.css
+++ b/Server/public/stylesheets/index.css
@@ -1,16 +1,27 @@
 :root{
 	--ass_width: 13vw;
+	--aside-padding: 16px;
+
+	--text-color: #FFFFFFDE;
+	--bkg-color: #121212;
 }
+
 
 a {
 	text-decoration: none;
-	color: #FFFFFFDE;
+	color: var(--text-color);
 }
 
-html{
-	background-color: #121212;
-	color: #FFFFFFDE;
+
+html {
+	background-color: var(--bkg-color);
+	color: var(--text-color);
+	box-sizing: border-box;
 }
+* {
+	box-sizing: inherit;
+}
+
 
 body {
 	font-size: 12pt;
@@ -18,17 +29,30 @@ body {
 	font-family: 'Noto Sans', sans-serif;
 }
 
+
 header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	align-items: center;
-	text-align: center;
 	background-color: #151726;
 	border-bottom: 4px #21315f solid;
-	padding: 10px;
 }
-
+header>a>img {
+    height: 63px;
+    width: auto;
+    display: block;
+}
+#peko {
+    opacity: 0;
+}
+#peko:hover {
+    opacity: 1;
+}
 header h1 {
 	margin: 0;
 }
+
 
 main {
 	display: flex;
@@ -38,20 +62,38 @@ main {
 }
 
 
-
 aside {
-	display: flex;
-	flex-direction: column;
+	position: sticky;
+	top: 33vh;
+	height: fit-content;
 	width: var(--ass_width);
 	/* z-index: 1; */
 	overflow-x: hidden;
 	background-color: #171717;
+	border-top: 2px #222222 solid;
+	border-right: 2px #222222 solid;
+	border-bottom: 2px #222222 solid;
 	border-left: 2px #222222 solid;
-	padding: 16px;
+	padding: var(--aside-padding);
 }
 #ass {
 	width: var(--ass_width);
+	padding: var(--aside-padding);
+	border-left: 2px var(--bkg-color) solid;
 }
+aside>h5 {
+	margin: 0;
+}
+aside>p {
+	margin: 0;
+	font-size: 6pt;
+}
+aside input {
+	/* width: 100%; */
+	width: 100%;
+	border-radius: 0;
+}
+
 
 @media screen and (max-width: 701px) {
 	main {
@@ -59,19 +101,20 @@ aside {
 	}
 	aside {
 		width: 100%;
+		border: none;
+		overflow-x:scroll;
+	}
+	#ass {
+		display: none;
 	}
 }
 
-aside input {
-	width: 100%;
-}
 
 #grade_list {
 	display: flex;
     align-items: center;
     flex-direction: column;
 }
-
 .grade {
 	display: flex;
 	flex-direction: column;
@@ -79,22 +122,18 @@ aside input {
 	/* width: 70%; */
 	max-width: 1120px;
 }
-
 .grade h3 {
 	margin: 20px 0 3px 0;
 }
-
 .kanji_container {
 	display: flex;
 	flex-wrap: wrap;
 }
-
 .kanji_item {
 	font-size: 1em;
 	padding: 1px 5px;
 	border: 1px black solid;
 }
-
 .kanji_item_active {
 	background-color: #1f5014;
 }
