--- a/Server/public/stylesheets/index.css
+++ b/Server/public/stylesheets/index.css
@@ -36,6 +36,7 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+	text-align: center;
 	background-color: #151726;
 	border-bottom: 4px #21315f solid;
 }
